allow update of single fields of Customer, Manager. Add new dto UpdateUserDto
